<resources>
    <string name="file_preferencia">com.safelyapp.autentifiacion.PREFERENCE_FILE_KEY</string>
    <string name="app_name">SafelyApp</string>
    <string name="btn_login">Inicia sesión</string>
    <string name="btn_login_alt">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="btn_signup_alt">¿No tienes una cuenta? Crea una</string>
    <string name="btn_signup">Crear cuenta</string>
    <string name="view_title_login">Inicia Sesión</string>
    <string name="view_title_signup">Crear cuenta</string>
    <string name="input_email">Ingresa tu email</string>
    <string name="input_password">Ingresa tu contraseña</string>
    <string name="input_repeatPassword">Repite tu contraseña</string>
    <string name="ht_email">Ejemplo: user@mail.com</string>
    <string name="ht_password">La contraseña debe estar conformada por al menos 6 carácteres alfanuméricos (A-Z, 1-9)</string>
    <string name="ht_repeatpassword">Por cuestiones de seguridad, las contraseñas deben ser iguales</string>
    <string name="input_repeatpassword">Repite la contraseña</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_location">Mapa</string>
    <string name="icon_group_add">Añadir</string>
    <string name="icon_devices">Dispositivos</string>
    <string name="btn_emergency">EMERGENCIA</string>
    <string name="view_title_menu">Menú</string>
    <string name="btn_account">Cuenta</string>
    <string name="btn_groups">Grupos</string>
    <string name="btn_medical_history">Historial Médico</string>
    <string name="btn_code_sos">Código SOS</string>
    <string name="btn_home">Inicio</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="btn_profile">Perfil</string>
    <string name="txt_info_web">Visita nuestro sitio web:</string>
    <string name="txt_website">www.safelyapp.com</string>
    <string name="navigation_drawer_open">Menu desplegable abierto</string>
    <string name="navigation_drawer_close">Menu desplegable cerrado</string>
    <string name="title_account">Cuenta</string>
    <string name="text_name">Nombre</string>
    <string name="text_email">Correo electrónico</string>
    <string name="text_phone">Teléfono</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="text_direction">Dirección</string>
    <string name="text_bottom_sheet">Seleccione una opción</string>
    <string name="btn_gallery">Subir imagen</string>
    <string name="btn_camera">Tomar fotografía</string>
    <string name="btn_confirm">" Confirmar"</string>
    <string name="title_groups">Contactos</string>
    <string name="btn_contacts">Añadidos</string>
    <string name="btn_add">Agregar</string>
    <string name="btn_request">Solicitudes</string>
    <string name="title_send_email">Ingresa una dirección de correo electrónico para enviar una solicitud de contacto</string>
    <string name="btn_send">Enviar</string>
    <string name="text_whithout_contacts">Aún no hay contactos registrados</string>
    <string name="text_whithout_request">Aún no hay invitaciones</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_reject">Rechazar</string>
    <string name="tv_username">Username</string>
    <string name="tv_email">account@mail.com</string>
    <string name="btn_delete">Eliminar</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="text_whithout_notifications">Bandeja vacía</string>
    <string name="tv_notification">Notificacion</string>
    <string name="tv_messagge">Mensaje</string>
    <string name="btn_stop_emergency">Cancelar</string>
    <string name="tv_count">5</string>
</resources>