<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/btn_home" />
        <item
            android:id="@+id/item_nav_medical"
            android:checked="false"
            android:icon="@drawable/ic_medical_information"
            android:title="@string/btn_medical_history" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/btn_profile">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/item_nav_profile"
                        android:checked="false"
                        android:icon="@drawable/ic_account"
                        android:title="@string/btn_account" />
                    <item
                        android:id="@+id/item_nav_logout"
                        android:checked="false"
                        android:icon="@drawable/ic_logout"
                        android:title="@string/btn_logout" />
                </group>
            </menu>
        </item>
    </group>

</menu>