<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <ImageView
        android:id="@+id/img_type"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_top"
        app:srcCompat="@drawable/ic_contact_add"/>

    <TextView
        android:id="@+id/tv_notification"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:gravity="bottom"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left_center"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_top"
        tools:text="@string/tv_notification" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left_center"
        app:layout_constraintTop_toBottomOf="@+id/tv_notification"
        tools:text="@string/tv_messagge" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_button_gradient"
        android:onClick="click"
        android:text="@string/btn_delete"
        android:textSize="12sp"
        android:theme="@style/buttonsFull"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message" />

</androidx.constraintlayout.widget.ConstraintLayout>