<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet"
    android:background="@drawable/dialog_bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/title_sheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_bottom_sheet"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_top" />

    <Button
        android:id="@+id/btn_layout_gallery"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_button_gradient"
        android:onClick="click"
        android:text="@string/btn_gallery"
        android:textSize="12sp"
        android:theme="@style/buttonsFull"
        app:icon="@drawable/ic_gallery"
        app:iconGravity="textStart"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_left_center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/title_sheet" />

    <Button
        android:id="@+id/btn_layout_camera"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_button_gradient"
        android:onClick="click"
        android:text="@string/btn_camera"
        android:textSize="12sp"
        android:theme="@style/buttonsFull"
        app:icon="@drawable/ic_gallery"
        app:iconGravity="textStart"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_right_center"
        app:layout_constraintTop_toBottomOf="@+id/title_sheet" />

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/btn_layout_gallery" />

</androidx.constraintlayout.widget.ConstraintLayout>